# seqrec

./: .gitignore  create_item_features.bash  gdown_images.bash  pyproject.toml  titok.ipynb
seqrec/: ae.py  dataset.py  dataset_utils.py  main_extract_features.py  popularity.py  train.py  train_rqvae.py  utils.py
seqrec/module/: config.py  feature_extractor.py  mlp.py  rotational_rqvae.py  rqvae.py  sasrec.py  utils.py
seqrec/test/: test_residual_quantizer.py
seqreq/: dataset_utils.py
