[project]
name = "seqreq"
version = "0.1.0"
description = "Sequential Recommendation Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seqrec*"]
