[project]
name = "seqrec"
version = "0.1.0"
description = "Sequential Recommendation Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "sentence-transformers>=5.2.3",
    "torch==2.9.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seqrec*"]
